# interactive_doc_experiments

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/workflows/: build_docs.yml
_static/: documentation_options.js
doc/source/: conf.py  index.rst
doc/source/_ext/: helloworld.py  recipe.py  todo.py
doc/source/reference/: index.rst  rbf_example.ipynb
lite/: jupyter-lite.json
lite/api/contents/: all.json
lite/extensions/jupyterlab-jupytext/: package.json
lite/extensions/jupyterlab-jupytext/static/: 568.a6cc96e1424e036a232f.js  remoteEntry.376eee4233772262dfc0.js
lite/files/: 0e253b95_ecc7_4e55_b4cd_2bd6a68c4f96.ipynb  511198a4_920f_459f_a69f_e2461c75b82b.ipynb  8a716359_d8ec_4808_9ca1_a409b86e9476.ipynb  8efbc41b_9db4_41ac_8dc1_f66796c498e5.ipynb  b051812c_665c_4b7f_ab85_da670040fac4.ipynb
reference/: index.html
src/example_package/: rbf.py
